--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -2,14 +2,27 @@
   margin: 0;
 }
 
-.topImage {
+.topImage img {
   width: 100%;
   height: 100vh;
-  opacity: 0.3;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.topImage .startButton {
+  width: 40%;
+}
+
+.topImage .startButton Link {
+  text-decoration: none;
 }
 
 .quizIndex {
   text-align: center;
   margin-top: 100px;
+}
+
+.resultIndex {
+  text-align: center;
 }
 /*# sourceMappingURL=App.css.map */
