--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -3,15 +3,23 @@
 }
 
 .topImage {
+  text-align: center;
   img {
-    width: 100%;
-    height: 100vh;
-    object-fit: contain;
+    margin: 10% auto;
   }
-  .startButton {
-    width: 40%;
-    Link {
-      text-decoration: none;
+  h1 {
+    margin-bottom: 30px;
+  }
+  .button {
+    text-align: center;
+    Button {
+      width: 40%;
+      padding: 10px;
+      margin: 20px auto;
+      display: block;
+      Link {
+        text-decoration: none;
+      }
     }
   }
 }
@@ -22,5 +30,9 @@
 }
 
 .resultIndex {
+  text-align: center;
+}
+
+.description {
   text-align: center;
 }
