--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
+
 .App {
   margin: 0;
 }
@@ -5,10 +7,12 @@
 .topImage {
   text-align: center;
   img {
-    margin: 10% auto;
+    margin: 10% auto 5%;
   }
   h1 {
     margin-bottom: 30px;
+    margin-top: 0;
+    font-family: "Yuji Syuku", serif;
   }
   .button {
     text-align: center;
