--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap");
 
+div {
+  font-family: "Yuji Syuku", serif;
+}
 .App {
   margin: 0;
 }
